# MAT

./: .gitignore  CMakeLists.txt  MAT.h  README.md  info.txt  main.cpp  main.sh  main_22  main_222  out.folded  packets_10k  packets_88k  python1.py  python2.py  python3.py  python3_1.py
Analysis/: ana.py
Test/: Test  Test.c  Test.cpp  rule_ana.py  test.py
data/: acc  longest_path_1  longest_path_10  longest_path_15  longest_path_2  longest_path_22  longest_path_3  longest_path_4  longest_path_5  longest_path_6  longest_path_7  longest_path_8  longest_path_9  packets  packets.bak  packets_10k  packets_15k  packets_1k  packets_22k  packets_2k  packets_3k  packets_4k  packets_5k  packets_6k  packets_7k  packets_8k  packets_9k  rules  rules.bak  rules_10k  rules_15k  rules_1k  rules_22k  rules_2k  rules_3k  rules_4k  rules_5k  rules_6k  rules_7k  rules_8k  (+3 more)
src/: MAT.cpp  MAT.h
test/: Test.cpp  bgp_ana.py  draw_tree.py  opti_trie.py  opti_trie_01.py  rule_ana.py  test.py
test/pic/: Src_Dst_Port_Distribution.eps
utils/: murmurhash.cpp  murmurhash.h
